--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Desarrollo de Aplicaciones</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-b from-black via-purple-950 to-black text-white flex flex-col min-h-screen relative">
 
-  <!-- Fondo decorativo Black Clover -->
+  <!-- Fondo decorativo -->
   <div class="absolute inset-0 bg-[url('https://wallpapercave.com/wp/wp6204383.jpg')] bg-cover bg-center opacity-20"></div>
 
-  <!-- Encabezado con logo + título -->
-  <header class="w-full bg-purple-800/90 flex items-center justify-center relative py-6 shadow-lg z-10">
-    <!-- Logo universidad -->
-    <img src="logo_uni.png" alt="Logo Universidad" class="absolute left-6 w-20 h-20 object-contain"> <!-- más grande -->
-    <!-- Título con mismo estilo que los botones -->
-    <h1 class="text-4xl md:text-5xl font-bold text-center drop-shadow-[0_0_15px_#a855f7]">
-      Desarrollo de Aplicaciones
-    </h1>
-  </header>
+    <!-- Encabezado -->
+    <header class="w-full bg-purple-800/90 flex items-center justify-center relative py-6 shadow-lg z-10">
+      <img src="logo_uni.png" alt="Logo Universidad" class="absolute left-6 w-20 h-20 object-contain">
+      <h1 class="text-4xl md:text-5xl font-bold text-center drop-shadow-[0_0_15px_#a855f7]">
+        Desarrollo de Aplicaciones
+      </h1>
+      <!-- Nombre alineado a la derecha -->
+      <span class="absolute right-6 text-lg md:text-xl font-bold text-purple-300 drop-shadow-[0_0_10px_#9333ea]">
+        Kimberly Casimiro Laura
+      </span>
+    </header>
+  
 
-  <!-- Contexto del curso (más estético) -->
-  <section class="max-w-4xl mx-auto mt-10 px-6 z-10">
+  <!-- Introducción / Sobre el curso -->
+  <section class="max-w-5xl mx-auto mt-10 px-6 z-10 w-full">
     <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700">
       <h2 class="text-2xl md:text-3xl font-bold text-purple-300 text-center mb-4 drop-shadow-[0_0_10px_#9333ea]">
         ✨ Sobre el Curso ✨
@@ -42,45 +45,67 @@
     </div>
   </section>
 
-  <!-- Botones de semanas -->
-  <main class="flex-grow flex flex-col items-center justify-center mt-12 z-10">
-    <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 px-4">
-      <!-- Botones 1 al 16 -->
-      <a href="semana1.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 1</a>
-      <a href="semana2.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 2</a>
-      <a href="semana3.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 3</a>
-      <a href="semana4.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 4</a>
-      <a href="semana5.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 5</a>
-      <a href="semana6.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 6</a>
-      <a href="semana7.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 7</a>
-      <a href="semana8.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 8</a>
-      <a href="semana9.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 9</a>
-      <a href="semana10.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 10</a>
-      <a href="semana11.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 11</a>
-      <a href="semana12.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 12</a>
-      <a href="semana13.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 13</a>
-      <a href="semana14.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 14</a>
-      <a href="semana15.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 15</a>
-      <a href="semana16.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">Semana 16</a>
-    </div>
+  <!-- Contenedor principal: sidebar (semanas) + área Canva -->
+  <main class="flex flex-1 mt-8 z-10 px-6 gap-6 items-start max-w-6xl mx-auto w-full">
+
+    <!-- Barra lateral semanas -->
+    <aside class="w-56 min-w-[14rem] bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-4 border border-purple-700 flex flex-col gap-3 sticky top-24 h-auto max-h-[72vh] overflow-y-auto">
+      <h2 class="text-lg font-bold text-purple-300 mb-2 text-center">Aprendizaje por Semanas</h2>
+      <div class="flex flex-col gap-2">
+        <a href="semana1.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 1</a>
+        <a href="semana2.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 2</a>
+        <a href="semana3.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 3</a>
+        <a href="semana4.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 4</a>
+        <a href="semana5.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 5</a>
+        <a href="semana6.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 6</a>
+        <a href="semana7.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 7</a>
+        <a href="semana8.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 8</a>
+        <a href="semana9.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 9</a>
+        <a href="semana10.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 10</a>
+        <a href="semana11.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 11</a>
+        <a href="semana12.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 12</a>
+        <a href="semana13.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 13</a>
+        <a href="semana14.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 14</a>
+        <a href="semana15.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 15</a>
+        <a href="semana16.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 16</a>
+      </div>
+    </aside>
+
+    <!-- Área principal: embed de Canva -->
+    <section class="flex-1 bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-6 border border-purple-700">
+      <h2 class="text-2xl font-bold text-purple-300 mb-4 drop-shadow-[0_0_10px_#9333ea]">🎨 Manual de descarga de Git y GitHub</h2>
+
+      <!--
+        He colocado la vista pública/embed del diseño Canva usando el ID que enviaste.
+        Si no se muestra correctamente: abre tu diseño en Canva > Compartir > Insertar y copia el código "embed".
+        Sustituye el valor del src por el que Canva te dé.
+      -->
+      <div class="w-full rounded-lg overflow-hidden border border-purple-700 shadow-lg">
+        <iframe
+          src="https://www.canva.com/design/DAGy-c34CUo/view?embed"
+          class="w-full h-[60vh] lg:h-[78vh]"
+          frameborder="0"
+          allowfullscreen
+          loading="lazy"
+          title="Manual Git y GitHub - Canva"
+        ></iframe>
+      </div>
+
   </main>
 
-  <section class="mt-10 text-center">
+  <!-- Recursos -->
+  <section class="mt-10 text-center z-10">
     <h2 class="text-2xl font-bold text-purple-700 mb-6">Recursos del Curso</h2>
-    
-    <div class="flex justify-center gap-6 flex-wrap">
-      <!-- Botón GitHub -->
-      <a href="https://github.com/tuusuario/tu-repositorio" target="_blank" 
-         class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg 
-                hover:bg-purple-400 hover:text-black transition transform 
-                hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
+    <div class="flex justify-center gap-6 flex-wrap px-6">
+      <!-- Puedes mantener más enlaces aquí -->
+      <a href="https://github.com/Wikkl20/DDA_Semana1" target="_blank" rel="noopener noreferrer"
+         class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
         🌐 Ver en GitHub
       </a>
     </div>
   </section>
 
-
-  <!-- Footer con contacto -->
+  <!-- Footer -->
   <footer class="w-full bg-purple-900/90 text-center py-6 mt-12 z-10">
     <p class="text-sm md:text-base">📱 Contacto: <span class="font-bold">900385966</span></p>
     <p class="text-sm md:text-base">✉️ Correo: <span class="font-bold">t01267f@ms.upla.edu.pe</span></p>
@@ -88,3 +113,4 @@
 
 </body>
 </html>
+
