--- a/semana1.html
+++ b/semana1.html
@@ -1,104 +1,135 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Semana 2 - Desarrollo de Aplicaciones</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Semana 1 - Desarrollo de Aplicaciones</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-b from-gray-900 via-purple-950 to-gray-900 min-h-screen flex flex-col text-white">
+<body class="bg-gradient-to-b from-black via-purple-950 to-black text-white flex flex-col min-h-screen relative">
+
+  <!-- Fondo decorativo -->
+  <div class="absolute inset-0 bg-[url('https://wallpapercave.com/wp/wp6204383.jpg')] bg-cover bg-center opacity-20"></div>
 
   <!-- Encabezado -->
-  <header class="bg-purple-700 py-6 shadow-lg relative flex justify-center items-center">
+  <header class="w-full bg-purple-800/90 flex items-center justify-center relative py-6 shadow-lg z-10">
     <img src="logo_uni.png" alt="Logo Universidad" class="absolute left-6 w-20 h-20 object-contain">
-    <h1 class="text-4xl font-bold tracking-widest">Desarrollo de Aplicaciones</h1>
+    <h1 class="text-4xl md:text-5xl font-bold text-center drop-shadow-[0_0_15px_#a855f7]">
+      Desarrollo de Aplicaciones
+    </h1>
+    <span class="absolute right-6 text-lg md:text-xl font-bold text-purple-300 drop-shadow-[0_0_10px_#9333ea]">
+      Kimberly Casimiro Laura
+    </span>
   </header>
 
-  <!-- Contenido de la semana -->
-  <main class="flex-grow container mx-auto px-6 py-10">
-    <h2 class="text-3xl font-bold text-purple-400 mb-6 text-center">Semana 2 - Métodos</h2>
+  <!-- Contenido principal con sidebar -->
+  <main class="flex flex-1 mt-8 z-10 px-6 gap-6 items-start max-w-6xl mx-auto w-full">
 
-    <!-- Introducción -->
-    <div class="bg-gray-800 bg-opacity-80 p-6 rounded-2xl shadow-xl mb-8">
-      <h3 class="text-xl font-semibold text-purple-300 mb-3">🔹 Introducción</h3>
-      <p class="text-lg leading-relaxed">
-        En esta segunda actividad se aborda el uso de <span class="font-bold">métodos en programación</span>, 
-        reforzando la modularización y la reutilización del código. Los ejercicios planteados 
-        involucran el cálculo de descuentos y beneficios adicionales en ventas, así como la 
-        determinación de sueldos considerando categorías, horas trabajadas, bonificaciones 
-        y descuentos legales. El objetivo es ejercitar la creación de métodos que resuelvan 
-        subproblemas específicos dentro de un programa más amplio.
-      </p>
-    </div>
+    <!-- Barra lateral -->
+    <aside class="w-56 min-w-[14rem] bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-4 border border-purple-700 flex flex-col gap-3 sticky top-24 h-auto max-h-[72vh] overflow-y-auto">
+      <h2 class="text-lg font-bold text-purple-300 mb-2 text-center">Semanas</h2>
+      <div class="flex flex-col gap-2">
+        <a href="semana1.html"  class="px-3 py-2 bg-purple-400 text-black font-bold rounded-lg shadow-lg transition">Semana 1</a>
+        <a href="semana2.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 2</a>
+        <a href="semana3.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 3</a>
+        <a href="semana4.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 4</a>
+        <a href="semana5.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 5</a>
+        <a href="semana6.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 6</a>
+        <a href="semana7.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 7</a>
+        <a href="semana8.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 8</a>
+        <a href="semana9.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 9</a>
+        <a href="semana10.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 10</a>
+        <a href="semana11.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 11</a>
+        <a href="semana12.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 12</a>
+        <a href="semana13.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 13</a>
+        <a href="semana14.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 14</a>
+        <a href="semana15.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 15</a>
+        <a href="semana16.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 16</a>
+      </div>
+    </aside>
 
-    <!-- Formulación del problema -->
-    <div class="bg-gray-800 bg-opacity-80 p-6 rounded-2xl shadow-xl">
-      <h3 class="text-xl font-semibold text-purple-300 mb-3">📌 Problemas a Resolver</h3>
-      <p class="text-lg mb-4">
-        <span class="font-bold">Actividad 01:</span>  
-        Una tienda ofrece un descuento dependiendo de las docenas adquiridas:
-      </p>
-      <ul class="list-disc list-inside space-y-2 text-lg">
-        <li>≥ 10 docenas → 20% de descuento</li>
-        <li>&lt; 10 docenas → 10% de descuento</li>
-      </ul>
-      <p class="text-lg mt-2">
-        Además, si el importe a pagar es ≥ 200, la tienda obsequia <span class="font-bold">2 lapiceros por cada docena</span>.  
-        El programa debe calcular el importe de la compra, el importe del descuento, el importe a pagar y los obsequios.
-      </p>
+    <!-- Área de contenido -->
+    <section class="flex-1 space-y-10">
 
-      <p class="text-lg mt-6">
-        <span class="font-bold">Actividad 02:</span>  
-        El sueldo bruto de un empleado se calcula como:
-      </p>
-      <ul class="list-disc list-inside space-y-2 text-lg">
-        <li>Sueldo básico = horas trabajadas × tarifa horaria</li>
-        <li>Tarifa horaria: Categoría A → S/.45.0 | Categoría B → S/.37.5</li>
-        <li>Bonificación por hijos: hasta 3 hijos → S/.40.5 c/u | más de 3 hijos → S/.35.0 c/u</li>
-        <li>Descuento por ley: ≥ 3500 → 13.5% | &lt; 3500 → 10%</li>
-      </ul>
-      <p class="text-lg mt-2">
-        El programa debe calcular el sueldo básico, el sueldo bruto, el descuento y el sueldo neto.
-      </p>
-    </div>
+      <!-- Introducción -->
+      <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700">
+        <h2 class="text-2xl md:text-3xl font-bold text-purple-300 mb-4 text-center">📖 Introducción a la Semana 1</h2>
+        <p class="text-lg leading-relaxed text-justify">
+          Durante la primera semana del curso se trabajaron dos ejercicios orientados a la práctica con 
+          <b>interfaces gráficas en Java</b> utilizando <b>Apache NetBeans</b>. 
+          Ambos ejercicios aplican conceptos básicos de programación estructurada y validación de datos, 
+          además de integrar cálculos matemáticos con una interfaz interactiva para el usuario.
+        </p>
+        <p class="text-lg leading-relaxed text-justify mt-4">
+          Los objetivos principales fueron: <br>
+          1️⃣ Aprender a estructurar un proyecto en NetBeans con paquetes separados (<i>Main</i> e <i>IUG</i>).<br>
+          2️⃣ Implementar la lógica de negocio directamente en botones de la interfaz.<br>
+          3️⃣ Validar la entrada de datos, evitando errores comunes (letras, espacios en blanco o valores negativos).<br>
+          4️⃣ Mostrar resultados con formato monetario claro para el usuario.
+        </p>
+      </div>
 
-    <!-- Botón de regreso -->
-    <div class="mt-10 text-center">
-      <a href="index.html" 
-         class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg 
-                hover:bg-purple-400 hover:text-black transition transform 
-                hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
-        ⬅ Volver al Inicio
-      </a>
-    </div>
+      <!-- Problema 1 -->
+      <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700">
+        <h2 class="text-xl font-bold text-purple-300 mb-4">🧩 Problema 1: Descuento General</h2>
+        <p class="text-justify mb-4">
+          El primer problema plantea el cálculo del importe a pagar por una cantidad de camisetas, 
+          cada una con un precio fijo de S/. 20. El reto incluye aplicar un 
+          <b>descuento general del 7%</b> al importe total y mostrar de manera clara el resultado al usuario. 
+          Se exige que el sistema valide que la cantidad ingresada sea un número entero positivo, 
+          descartando entradas no válidas como letras, espacios en blanco o valores negativos.
+        </p>
+        <div class="w-full rounded-lg overflow-hidden border border-purple-700 shadow-lg">
+          <iframe 
+            src="https://www.canva.com/design/DAGy_LQNuHs/Jd4kWQQrmTBbWZ7r_AbDDw/view?embed"
+            class="w-full h-[60vh] lg:h-[78vh]"
+            frameborder="0"
+            allowfullscreen
+            loading="lazy"
+            title="Diagrama de Clases - Problema 1">
+          </iframe>
+        </div>
+      </div>
+
+      <!-- Problema 2 -->
+      <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700">
+        <h2 class="text-xl font-bold text-purple-300 mb-4">🧩 Problema 2: Descuento de Verano</h2>
+        <p class="text-justify mb-4">
+          En el segundo problema, además del descuento general, se introduce un 
+          <b>descuento de verano adicional del 7%</b>, aplicado sobre el subtotal ya reducido. 
+          Esto implica que los cálculos deben realizarse de forma secuencial, mostrando de manera 
+          diferenciada el importe inicial, el descuento general, el descuento de verano y el total final.
+        </p>
+        <div class="w-full rounded-lg overflow-hidden border border-purple-700 shadow-lg">
+          <iframe 
+            src="https://www.canva.com/design/DAGy_TLTJps/py5kjKsxFARZ_TBGtihwvQ/view?embed"
+            class="w-full h-[60vh] lg:h-[78vh]"
+            frameborder="0"
+            allowfullscreen
+            loading="lazy"
+            title="Diagrama de Clases - Problema 2">
+          </iframe>
+        </div>
+      </div>
+
+      <!-- Botones navegación -->
+      <div class="flex justify-between">
+        <a href="index.html" 
+           class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
+          ⬅️ Volver a Inicio
+        </a>
+        <a href="semana2.html" 
+           class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
+          ➡️ Ir a Semana 2
+        </a>
+      </div>
+    </section>
   </main>
 
-  <section class="mt-10 text-center">
-    <h2 class="text-2xl font-bold text-purple-700 mb-6">Recursos del Curso</h2>
-    
-    <div class="flex justify-center gap-6 flex-wrap">
-      <!-- Botón GitHub -->
-      <a href="https://github.com/tuusuario/tu-repositorio" target="_blank" 
-         class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg 
-                hover:bg-purple-400 hover:text-black transition transform 
-                hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
-        🌐 Ver en GitHub
-      </a>
-  
-      <!-- Botón Descargar App -->
-      <a href="descargas/miapp.zip" download
-         class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg 
-                hover:bg-purple-400 hover:text-black transition transform 
-                hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
-        ⬇️ Descargar App
-      </a>
-    </div>
-  </section>
-
   <!-- Footer -->
-  <footer class="bg-black bg-opacity-70 py-6 mt-10 text-center">
-    <p class="text-sm">📞 900385966 | ✉️ t01267f@ms.upla.edu.pe</p>
-    <p class="text-xs mt-2 text-gray-400">Universidad Peruana Los Andes - 2025</p>
+  <footer class="w-full bg-purple-900/90 text-center py-6 mt-12 z-10">
+    <p class="text-sm md:text-base">📱 Contacto: <span class="font-bold">900385966</span></p>
+    <p class="text-sm md:text-base">✉️ Correo: <span class="font-bold">t01267f@ms.upla.edu.pe</span></p>
   </footer>
 
 </body>
