--- a/semana2.html
+++ b/semana2.html
@@ -1,65 +1,132 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Semana 2 - Desarrollo de Aplicaciones</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-b from-gray-900 via-purple-950 to-gray-900 min-h-screen flex flex-col text-white">
+<body class="bg-gradient-to-b from-black via-purple-950 to-black text-white flex flex-col min-h-screen relative">
 
-  <!-- Encabezado con logo y título -->
-  <header class="bg-purple-700 py-6 shadow-lg relative flex justify-center items-center">
+  <!-- Fondo decorativo -->
+  <div class="absolute inset-0 bg-[url('https://wallpapercave.com/wp/wp6204383.jpg')] bg-cover bg-center opacity-20"></div>
+
+  <!-- Encabezado -->
+  <header class="w-full bg-purple-800/90 flex items-center justify-center relative py-6 shadow-lg z-10">
     <img src="logo_uni.png" alt="Logo Universidad" class="absolute left-6 w-20 h-20 object-contain">
-    <h1 class="text-4xl font-bold tracking-widest">Desarrollo de Aplicaciones</h1>
+    <h1 class="text-4xl md:text-5xl font-bold text-center drop-shadow-[0_0_15px_#a855f7]">
+      Desarrollo de Aplicaciones
+    </h1>
+    <span class="absolute right-6 text-lg md:text-xl font-bold text-purple-300 drop-shadow-[0_0_10px_#9333ea]">
+      Kimberly Casimiro Laura
+    </span>
   </header>
 
-  <!-- Contenido de la semana -->
-  <main class="flex-grow container mx-auto px-6 py-10">
-    <h2 class="text-3xl font-bold text-purple-400 mb-6 text-center">Semana 2</h2>
+  <!-- Contenido principal con sidebar -->
+  <main class="flex flex-1 mt-8 z-10 px-6 gap-6 items-start max-w-6xl mx-auto w-full">
 
-    <div class="bg-gray-800 bg-opacity-80 p-6 rounded-2xl shadow-xl">
-      <p class="text-lg leading-relaxed">
-        Aquí va el contenido correspondiente a la <span class="font-bold text-purple-400">Semana 2</span>.  
-        Puedes incluir apuntes, lecturas recomendadas, ejercicios prácticos o resúmenes de lo visto en clase.
-      </p>
-    </div>
+    <!-- Barra lateral -->
+    <aside class="w-56 min-w-[14rem] bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-4 border border-purple-700 flex flex-col gap-3 sticky top-24 h-auto max-h-[72vh] overflow-y-auto">
+      <h2 class="text-lg font-bold text-purple-300 mb-2 text-center">Semanas</h2>
+      <div class="flex flex-col gap-2">
+        <a href="semana1.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 1</a>
+        <a href="semana2.html"  class="px-3 py-2 bg-purple-400 text-black font-bold rounded-lg shadow-lg transition">Semana 2</a>
+        <a href="semana3.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 3</a>
+        <a href="semana4.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 4</a>
+        <a href="semana5.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 5</a>
+        <a href="semana6.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 6</a>
+        <a href="semana7.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 7</a>
+        <a href="semana8.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 8</a>
+        <a href="semana9.html"  class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 9</a>
+        <a href="semana10.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 10</a>
+        <a href="semana11.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 11</a>
+        <a href="semana12.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 12</a>
+        <a href="semana13.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 13</a>
+        <a href="semana14.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 14</a>
+        <a href="semana15.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 15</a>
+        <a href="semana16.html" class="px-3 py-2 bg-purple-700 text-white font-bold rounded-lg shadow-lg hover:bg-purple-400 hover:text-black transition">Semana 16</a>
+      </div>
+    </aside>
 
-    <!-- Botón de regreso -->
-    <div class="mt-10 text-center">
-      <a href="index.html" 
-         class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg 
-                hover:bg-purple-400 hover:text-black transition transform 
-                hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
-        ⬅ Volver al Inicio
-      </a>
-    </div>
+    <!-- Área de contenido -->
+    <section class="flex-1 space-y-10">
+
+      <!-- Introducción -->
+      <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700">
+        <h2 class="text-2xl md:text-3xl font-bold text-purple-300 mb-4 text-center">📖 Introducción a la Semana 2</h2>
+        <p class="text-lg leading-relaxed text-justify">
+          En la segunda semana se resolvieron dos problemas orientados al manejo de 
+          <b>estructuras condicionales</b> y <b>validación de datos</b> en aplicaciones gráficas desarrolladas con 
+          <b>Java en Apache NetBeans</b>. 
+          Estos ejercicios refuerzan el diseño modular del proyecto, dividiendo el código en paquetes 
+          (<i>Main</i> e <i>IUG</i>) y concentrando la lógica en eventos de botones. 
+          Asimismo, se puso énfasis en la correcta interacción con el usuario, aplicando validaciones 
+          estrictas para evitar errores de ingreso de datos y mostrando cálculos detallados en la interfaz.
+        </p>
+      </div>
+
+      <!-- Problema 1 -->
+      <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700">
+        <h2 class="text-xl font-bold text-purple-300 mb-4">🧩 Actividad 01: Tienda de Docenas</h2>
+        <p class="text-justify mb-4">
+          Se pide calcular el importe de una compra en función de las docenas adquiridas. 
+          El descuento depende de la cantidad: 
+          <b>20% si son 10 o más docenas</b>, de lo contrario <b>10%</b>. 
+          Además, si el importe a pagar es igual o superior a S/.200, 
+          la tienda ofrece <b>2 lapiceros por cada docena adquirida</b>. 
+          El programa debe mostrar el importe total, el descuento aplicado, el importe final 
+          y el número de obsequios, validando siempre que la entrada sea un número entero válido.
+        </p>
+        <div class="w-full rounded-lg overflow-hidden border border-purple-700 shadow-lg">
+          <iframe 
+            src="https://www.canva.com/design/DAGy_LQNuHs/Jd4kWQQrmTBbWZ7r_AbDDw/view?embed" 
+            class="w-full h-[60vh] lg:h-[78vh]" frameborder="0" allowfullscreen loading="lazy"
+            title="Diagrama de Clases - Problema 1">
+          </iframe>
+        </div>
+      </div>
+
+      <!-- Problema 2 -->
+      <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700">
+        <h2 class="text-xl font-bold text-purple-300 mb-4">🧩 Actividad 02: Sueldo de Empleado</h2>
+        <p class="text-justify mb-4">
+          El segundo problema consiste en calcular el sueldo de un trabajador considerando distintos factores. 
+          El <b>sueldo básico</b> depende de las horas trabajadas y de la categoría (A → S/.45.0, B → S/.37.5). 
+          Luego se añade una <b>bonificación por hijos</b>: hasta 3 hijos reciben S/.40.5 cada uno, y a partir del cuarto hijo, S/.35.0 cada uno. 
+          Finalmente, se aplica un <b>descuento por ley</b> que depende del sueldo bruto: 
+          13.5% si es ≥ 3500 o 10% si es menor. 
+          El sistema debe mostrar claramente el sueldo básico, el sueldo bruto, el descuento aplicado y el sueldo neto, 
+          garantizando la validación de todos los datos ingresados.
+        </p>
+        <div class="w-full rounded-lg overflow-hidden border border-purple-700 shadow-lg">
+          <iframe 
+            src="https://www.canva.com/design/DAGy_TLTJps/py5kjKsxFARZ_TBGtihwvQ/view?embed" 
+            class="w-full h-[60vh] lg:h-[78vh]" frameborder="0" allowfullscreen loading="lazy"
+            title="Diagrama de Clases - Problema 2">
+          </iframe>
+        </div>
+      </div>
+
+      <!-- Botones navegación -->
+      <div class="flex justify-between">
+        <a href="semana1.html" 
+           class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
+          ⬅️ Semana 1
+        </a>
+        <a href="index.html" 
+           class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
+          🏠 Volver a Inicio
+        </a>
+        <a href="semana3.html" 
+           class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
+          ➡️ Semana 3
+        </a>
+      </div>
+    </section>
   </main>
-  
-  <section class="mt-10 text-center">
-    <h2 class="text-2xl font-bold text-purple-700 mb-6">Recursos del Curso</h2>
-    
-    <div class="flex justify-center gap-6 flex-wrap">
-      <!-- Botón GitHub -->
-      <a href="https://github.com/tuusuario/tu-repositorio" target="_blank" 
-         class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg 
-                hover:bg-purple-400 hover:text-black transition transform 
-                hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
-        🌐 Ver en GitHub
-      </a>
-  
-      <!-- Botón Descargar App -->
-      <a href="descargas/miapp.zip" download
-         class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg 
-                hover:bg-purple-400 hover:text-black transition transform 
-                hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
-        ⬇️ Descargar App
-      </a>
-    </div>
-  </section>
 
-   <!-- Footer con contacto -->
-   <footer class="w-full bg-purple-900/90 text-center py-6 mt-12 z-10">
+  <!-- Footer -->
+  <footer class="w-full bg-purple-900/90 text-center py-6 mt-12 z-10">
     <p class="text-sm md:text-base">📱 Contacto: <span class="font-bold">900385966</span></p>
     <p class="text-sm md:text-base">✉️ Correo: <span class="font-bold">t01267f@ms.upla.edu.pe</span></p>
   </footer>
