--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
   <!-- Fondo decorativo -->
   <div class="absolute inset-0 bg-[url('https://wallpapercave.com/wp/wp6204383.jpg')] bg-cover bg-center opacity-20"></div>
 
-    <!-- Encabezado -->
-    <header class="w-full bg-purple-800/90 flex items-center justify-center relative py-6 shadow-lg z-10">
-      <img src="logo_uni.png" alt="Logo Universidad" class="absolute left-6 w-20 h-20 object-contain">
-      <h1 class="text-4xl md:text-5xl font-bold text-center drop-shadow-[0_0_15px_#a855f7]">
-        Desarrollo de Aplicaciones
-      </h1>
-      <!-- Nombre alineado a la derecha -->
-      <span class="absolute right-6 text-lg md:text-xl font-bold text-purple-300 drop-shadow-[0_0_10px_#9333ea]">
-        Kimberly Casimiro Laura
-      </span>
-    </header>
+  <!-- Encabezado -->
+  <header class="w-full bg-purple-800/90 flex items-center justify-center relative py-6 shadow-lg z-10">
+    <img src="logo_uni.png" alt="Logo Universidad" class="absolute left-6 w-20 h-20 object-contain">
+    <h1 class="text-4xl md:text-5xl font-bold text-center drop-shadow-[0_0_15px_#a855f7]">
+      Desarrollo de Aplicaciones
+    </h1>
+    <!-- Nombre alineado a la derecha -->
+    <span class="absolute right-6 text-lg md:text-xl font-bold text-purple-300 drop-shadow-[0_0_10px_#9333ea]">
+      Kimberly Casimiro Laura
+    </span>
+  </header>
   
-
   <!-- Introducción / Sobre el curso -->
   <section class="max-w-5xl mx-auto mt-10 px-6 z-10 w-full">
     <div class="bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-8 border border-purple-700">
@@ -74,22 +73,17 @@
     <!-- Área principal: embed de Canva -->
     <section class="flex-1 bg-purple-900/40 backdrop-blur-md rounded-2xl shadow-xl p-6 border border-purple-700">
       <h2 class="text-2xl font-bold text-purple-300 mb-4 drop-shadow-[0_0_10px_#9333ea]">🎨 Manual de descarga de Git y GitHub</h2>
-
-      <!--
-        He colocado la vista pública/embed del diseño Canva usando el ID que enviaste.
-        Si no se muestra correctamente: abre tu diseño en Canva > Compartir > Insertar y copia el código "embed".
-        Sustituye el valor del src por el que Canva te dé.
-      -->
       <div class="w-full rounded-lg overflow-hidden border border-purple-700 shadow-lg">
         <iframe
-          src="https://www.canva.com/design/DAGy-c34CUo/view?embed"
+          src="https://www.canva.com/design/DAGy-c34CUo/o1Y8xgbsm61Tud-QEtaMVQ/view?embed"
           class="w-full h-[60vh] lg:h-[78vh]"
           frameborder="0"
           allowfullscreen
           loading="lazy"
-          title="Manual Git y GitHub - Canva"
-        ></iframe>
+          title="Manual Git y GitHub - Canva">
+        </iframe>
       </div>
+    </section>
 
   </main>
 
@@ -97,7 +91,6 @@
   <section class="mt-10 text-center z-10">
     <h2 class="text-2xl font-bold text-purple-700 mb-6">Recursos del Curso</h2>
     <div class="flex justify-center gap-6 flex-wrap px-6">
-      <!-- Puedes mantener más enlaces aquí -->
       <a href="https://github.com/Wikkl20/DDA_Semana1" target="_blank" rel="noopener noreferrer"
          class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105 hover:shadow-[0_0_15px_#a855f7]">
         🌐 Ver en GitHub
@@ -113,4 +106,3 @@
 
 </body>
 </html>
-
